Fixes to docker.sh and tutorial Makefile.  Move final result of hands-on exercises into solutions subdirectory. Increase loop size in fib-loop example.  Minor code cleanup in toy-spawn-sync.cpp

--- a/tutorial/Makefile
+++ b/tutorial/Makefile
@@ -3,6 +3,9 @@ CXX = clang++
 LLVM_CONFIG = llvm-config
 
 TARGETS = nqueens seq-nqueens toy-spawn-sync toy-parfor
+RUNTIME_BUILD = /tutorial/cheetah/build
+
+.PHONY: clean cheetah
 
 # Set flags for different OpenCilk tools
 ifeq ($(CILKSAN),1)
@@ -14,7 +17,7 @@ ifeq ($(CILKSCALE),1)
 endif
 endif
 
-default: $(TARGET)
+default: $(TARGETS)
 
 % : %.c
 	$(CC) -g $< `$(LLVM_CONFIG) --cflags --ldflags --system-libs --libs core orcjit native` -O3 -o $@
@@ -28,5 +31,10 @@ nqueens : nqueens.c
 # run:
 # 	LD_LIBRARY_PATH="$(PWD)/cheetah/build/lib/`$(LLVM_CONFIG) --host-target`/:`$(LLVM_CONFIG) --libdir`/clang/12.0.0/lib/`$(LLVM_CONFIG) --host-target`/" LIBRARY_PATH=$$LD_LIBRARY_PATH ./$(TARGET) $(OPTS)
 
+cheetah:
+	mkdir -p $(RUNTIME_BUILD)
+	cmake --build $(RUNTIME_BUILD)
+
 clean:
+	cmake --build $(RUNTIME_BUILD) --target clean
 	rm -rf $(TARGETS) *~
